k8s/apps_gateway_waypoint/waypoint_proxy.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: apps-gateway-waypoint
  namespace: servicemesh-apps
  labels:
    istio.io/waypoint-for: service-a
spec:
  gatewayClassName: istio-waypoint
  listeners:
  - name: mesh
    port: 15008
    protocol: HBONE
