k8s/apps_gateway_waypoint/gateway-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: apps-gateway
  namespace: servicemesh-apps
spec:
  to:
    kind: Service
    name: apps-gateway-istio
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
