k8s/apps_gateway_waypoint/service-a-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apps-gateway-default-route
  namespace: servicemesh-apps
spec:
  parentRefs:
  - name: apps-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: service-a
      port: 8080
