k8s/apps_gateway_waypoint/waypoint_routing.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service-a-waypoint-route
  namespace: servicemesh-apps
spec:
  parentRefs:
  - group: ""
    name: service-a
    kind: Service
    namespace: servicemesh-apps
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: service-a
      port: 8080
